picture fixes on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,7 +97,7 @@ input[type="checkbox"] {
 
 .picture {
   float: right;
-  width: 40%;
+  width: fit-content;
   left: 1000px;
   font-size: 10px;
 }
